Make ParticleTests work in every country